# itis2022_4c_2s__oip

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: logger.py
demo/: app.py  engine_launcher.py  styles.py
files_accessor/: files_accessor.py
files_management/: files_accessor.py
indexes_management/: indexes_service.py
task1/: crawler.py  index.txt  target_list.txt  target_list_generator.py
task1/crawled/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  (+69 more)
task2/: lemmas.txt  main.py  setup.py  t.py  tokens.txt  version_fr.py  version_rus.py  verson_abstarct.py
task2/lemmas/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  (+69 more)
task2/tokens/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  11.txt  12.txt  (+95 more)
task3/: invert_index.txt  invert_index_creator.py  lemmas_invert_index.txt  search.py  search_helper.py
task4/: main.py
task5/: main_base.py  version_boolean_with_ranging.py  version_protocol.py  version_transformer.py  version_vector_tfidf.py
(+218 files in other folders)
