[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-search-app"
version = "0.1.0"
description = "Поисковая система по документам"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    # Веб-скрапинг
    "beautifulsoup4",
    
    # Обработка текста
    "nltk",
    "pymorphy2",
    "pymorphy2-dicts-ru",
    "spacy",
    
    # ML/эмбеддинги
    "sentence-transformers",
    "scikit-learn",
    
    # Логирование
    "loguru",
    
    # Интерфейс
    "streamlit",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["demo", "task*", "config", "*_management"]
